tests/fixtures/invalid/slice_non_string_target.lby
fn main -> i64
    let a array<i64> = [1, 2, 3]
    a[0:2]
    0
